# backend/docs/swagger.json
@@ -192,7 +192,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Record"
+                    "ChatRecord"
                 ],
                 "summary": "list records by chat ID",
                 "parameters": [
@@ -252,7 +252,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Record"
+                    "ChatRecord"
                 ],
                 "summary": "list my records",
                 "parameters": [
@@ -271,6 +271,53 @@
                             "type": "array",
                             "items": {
                                 "$ref": "#/definitions/models.Record"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/common.HttpError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/common.HttpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/drivers": {
+            "get": {
+                "description": "list my driver exams",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver"
+                ],
+                "summary": "list my driver exams",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer和token空格拼接",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Exam"
                             }
                         }
                     },
@@ -1098,7 +1145,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Record"
+                    "ChatRecord"
                 ],
                 "summary": "list my records",
                 "parameters": [
@@ -1143,7 +1190,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Record"
+                    "ChatRecord"
                 ],
                 "summary": "Add records",
                 "parameters": [
@@ -1588,6 +1635,9 @@
             "properties": {
                 "id": {
                     "type": "integer"
+                },
+                "normal": {
+                    "type": "boolean"
                 }
             }
         },
@@ -1748,6 +1798,9 @@
                 "is_public": {
                     "type": "boolean"
                 },
+                "normal": {
+                    "type": "boolean"
+                },
                 "score": {
                     "type": "integer"
                 },
@@ -1878,6 +1931,8 @@
         "time.Duration": {
             "type": "integer",
             "enum": [
+                -9223372036854775808,
+                9223372036854775807,
                 1,
                 1000,
                 1000000,
@@ -1886,6 +1941,8 @@
                 3600000000000
             ],
             "x-enum-varnames": [
+                "minDuration",
+                "maxDuration",
                 "Nanosecond",
                 "Microsecond",
                 "Millisecond",
